Update and rename download.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <body>
- <button type="button" src="Download.png">
+ <button type="button">
 <a class="btn btn-danger" role="button" href="C:\Users\HP\Desktop\DO NOT OPEN\Message\chat.bat" download="C:\Users\HP\Desktop\DO NOT OPEN\Message">Download</a>
 </button>
 </body>
