--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <body>
  <button type="button">
-<a class="btn btn-danger" role="button" href="DO NOT OPEN\Message\chat.bat" download="DO NOT OPEN\Message">Download</a>
+<a class="btn btn-danger" role="button" href="DO NOT OPEN\Message\chat.bat" download="DO NOT OPEN/Message/chat.bat">Download</a>
 </button>
 </body>
 </html>
