--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 </head>
 <body>
 <body>
- <button type="button">
-<a class="btn btn-danger" role="button" href="DO NOT OPEN\Message\chat.bat" download="DO NOT OPEN/Message/chat.bat">Download</a>
-</button>
+<input type="button" value="Download Now!" onclick="window.location = 'DO NOT OPEN/Message/chat.bat';">
 </body>
 </html>
