--- a/download.html
+++ b/download.html
@@ -1,13 +1,14 @@
 <html>
 <head>
 <title>
+  Eapps
 </title>
 </head>
 <body>
   <em>
 To download the chat application click 
   </em>
-<a href="DO NOT OPEN/Message/chat.bat" download="DO NOT OPEN/Message/chat.bat" type="button" value="Download Now">
+<a href="DO NOT OPEN/Message/chat.bat" download="DO NOT OPEN/Message/chat.bat">
 </a>
 </body>
 </html>
