--- a/download.html
+++ b/download.html
@@ -9,6 +9,7 @@
 To download the chat application click 
   </em>
 <a href="DO NOT OPEN/Message/chat.bat" download="DO NOT OPEN/Message/chat.bat">
+  Download
 </a>
 </body>
 </html>
